--- a/FileServer.Infrstructure.Repository(DAO)/app.config
+++ b/FileServer.Infrstructure.Repository(DAO)/app.config
@@ -1,1 +1,5 @@
-﻿
+﻿<configuration>
+  <appSettings>
+    <add key ="path" value =".\alumnosJson-appConfig.json"/>
+  </appSettings>
+</configuration>
