Añadida funcionalidad que de combobox que coja ruta de variable de entorno. close #6

--- a/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
+++ b/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
@@ -61,12 +61,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlumnoRepository.cs" />
-    <Compile Include="IAlumnoRepository.cs" />
+    <Compile Include="Repositories\AlumnoRepository.cs" />
+    <Compile Include="Interfaces\IAlumnoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
