--- a/FileServer.Presentation.WinSite/App.config
+++ b/FileServer.Presentation.WinSite/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key ="path" value =".\alumnosJson-appConfig.json"/>
+    <add key ="pathEnVa" value =".\alumnosJson-EnviVar.json"/>
+    <add key ="allPath" value ="C:\Users\G1\source\repos\FileServer\FileServer.Presentation.WinSite\bin\Debug"/>
+  </appSettings>
 </configuration>
