Modificación en la variable de entorno. issue #6

--- a/FileServer.Presentation.WinSite/App.config
+++ b/FileServer.Presentation.WinSite/App.config
@@ -5,7 +5,6 @@
     </startup>
   <appSettings>
     <add key ="path" value =".\alumnosJson-appConfig.json"/>
-    <add key ="pathEnVa" value =".\alumnosJson-EnviVar.json"/>
-    <add key ="allPath" value ="C:\Users\G1\source\repos\FileServer\FileServer.Presentation.WinSite\bin\Debug"/>
+    <add key ="pathEnVa" value ="C:\Windows\alumnosJson-EnviVar.json"/>
   </appSettings>
 </configuration>
