Añadido log. info en bin/debug para applicación. issue #9

--- a/FileServer.Presentation.WinSite/App.config
+++ b/FileServer.Presentation.WinSite/App.config
@@ -5,6 +5,6 @@
     </startup>
   <appSettings>
     <add key ="path" value =".\alumnosJson-appConfig.json"/>
-    <add key ="pathEnVa" value ="C:\Windows\alumnosJson-EnviVar.json"/>
+    <add key ="pathEnVa" value ="C:\Users\G1\Documents\alumnosJson-EnviVar.json"/>
   </appSettings>
 </configuration>
