extensión elegida por el usuario cogidas desde app.config. close #10

--- a/FileServer.Presentation.WinSite/App.config
+++ b/FileServer.Presentation.WinSite/App.config
@@ -6,5 +6,10 @@
   <appSettings>
     <add key ="path" value =".\alumnosJson-appConfig.json"/>
     <add key ="pathEnVa" value ="C:\Users\G1\Documents\alumnosJson-EnviVar.json"/>
+    <add key ="fileName" value =".\AlumnosFile"/>
+    <add key ="enviroment" value ="VUELING_HOME"/>
+    <add key ="json" value =".json"/>
+    <add key ="xml" value =".xml"/>
+    <add key ="txt" value =".txt"/>
   </appSettings>
 </configuration>
