Añadido log4net con ficheros de trazas y errores. close #9

--- a/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
+++ b/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager\ExceptionManager.cs" />
     <Compile Include="Manager\FileManager.cs" />
     <Compile Include="Repositories\AlumnoRepository.cs" />
     <Compile Include="Interfaces\IAlumnoRepository.cs" />
