--- a/FileServer.Infrstructure.Repository(DAO)/log4net.config
+++ b/FileServer.Infrstructure.Repository(DAO)/log4net.config
@@ -1,23 +1,62 @@
 ﻿<log4net>
   <root>
     <level value="ALL" />
-    <appender-ref ref="console" />
-    <appender-ref ref="file" />
+    <appender-ref ref="FileAppenderError" />
+    <appender-ref ref="FileAppenderDebug" />
   </root>
-  <appender name="console" type="log4net.Appender.ConsoleAppender">
+  <!--<appender name="console" type="log4net.Appender.ConsoleAppender">
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date %level %logger - %message%newline" />
     </layout>
-  </appender>
-  <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="Log4Net-Info.log" />
+  </appender>-->
+  <appender name="FileAppenderError" type="log4net.Appender.FileAppender">
+    <file value="ErrorLog.txt" />
     <appendToFile value="true" />
-    <rollingStyle value="Size" />
-    <maxSizeRollBackups value="5" />
-    <maximumFileSize value="10MB" />
-    <staticLogFileName value="true" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+      <conversionPattern value="%-4timestamp [%thread] %-5level %logger %ndc - %message%newline" />
+    </layout>
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <levelMin value="ERROR" />
+      <levelMax value="FATAL" />
+    </filter>
+  </appender>
+  
+  
+  <appender name="FileAppenderDebug" type="log4net.Appender.FileAppender">
+    <file value="TrazasLog.txt" />
+    <appendToFile value="true" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%-4timestamp [%thread] %-5level %logger - %message%newline" />
     </layout>
   </appender>
+  
+  
+  <appender name="SmtpAppender" type="log4net.Appender.SmtpAppender">
+    <authentication value="Basic" />
+    <to value="harrison_silva_2@hotmail.com" />
+    <from value="packets125@gmail.com" />
+    <subject value="ERROR FileServer" />
+    <username value="vuelingdrv@gmail.com"/>
+    <password value="vuelingdrvpass"/>
+    <smtpHost value="smtp.gmail.com" />
+    <bufferSize value="1" />
+    <port value="587"/>
+    <EnableSsl value="true" />
+    <lossy value="true" />
+    <evaluator type="log4net.Core.LevelEvaluator">
+      <threshold value="ERROR"/>
+      </evaluator>
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%newline%date [%thread] %-5level %logger [%property{NDC}] - %message%newline%newline%newline" />
+    </layout>
+  </appender>
+  
+  
+  <logger name="EmailLogger">
+    <level value="Error">
+    </level>
+    <appender-ref ref="SmtpAppender"/>
+  </logger>
 </log4net>
