Ejemplo de Repository Pattern y su respectiva implementación con BehaviorTest

--- a/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
+++ b/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
@@ -66,9 +66,14 @@
   <ItemGroup>
     <Compile Include="Manager\ExceptionManager.cs" />
     <Compile Include="Manager\FileManager.cs" />
+    <Compile Include="Manager\ScriptManager.cs" />
     <Compile Include="Repositories\AlumnoRepository.cs" />
     <Compile Include="Interfaces\IAlumnoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryPaternEjemplo\EntityModel.cs" />
+    <Compile Include="RepositoryPaternEjemplo\GenericRepository.cs" />
+    <Compile Include="RepositoryPaternEjemplo\Student.cs" />
+    <Compile Include="RepositoryPaternEjemplo\StudentRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="log4net.config">
