Prueba behavior mejorado acabado

--- a/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
+++ b/FileServer.Infrstructure.Repository(DAO)/FileServer.Infrastructure.Repository(DAO).csproj
@@ -66,6 +66,8 @@
   <ItemGroup>
     <Compile Include="Manager\ExceptionManager.cs" />
     <Compile Include="Manager\FileManager.cs" />
+    <Compile Include="Interfaces\FileManagerAbstract.cs" />
+    <Compile Include="Manager\FileManagerAbstract-JSON.cs" />
     <Compile Include="Manager\ScriptManager.cs" />
     <Compile Include="Repositories\AlumnoRepository.cs" />
     <Compile Include="Interfaces\IAlumnoRepository.cs" />
