--- a/StudentRepository.Behavior.Test/packages.config
+++ b/StudentRepository.Behavior.Test/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="5.0.0" targetFramework="net461" />
-  <package id="FluentAssertions.Json" version="5.0.0" targetFramework="net461" />
+  <package id="Autofac" version="4.6.2" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.1.2" targetFramework="net461" />
+  <package id="FluentAssertions.Autofac" version="0.7.2" targetFramework="net461" developmentDependency="true" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net461" />
   <package id="SpecRun.Runner" version="1.7.2" targetFramework="net461" />
   <package id="SpecRun.SpecFlow" version="1.7.2" targetFramework="net461" />
