--- a/FileServer.Presentation.WinSite/App.config
+++ b/FileServer.Presentation.WinSite/App.config
@@ -11,5 +11,6 @@
     <add key ="json" value =".json"/>
     <add key ="xml" value =".xml"/>
     <add key ="txt" value =".txt"/>
+    <add key ="resx" value ="C:\Users\G1\source\repos\FileServer\FileServer.Presentation.WinSite\FileManager.Spanish.resx"/>
   </appSettings>
 </configuration>
